--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -95,37 +95,7 @@ This research was funded in part by Economic and Social Research Council grants 
 %\begin{abstract}
 %\noindent
 
-%The abstract should be on a separate page and be no longer than 150 words. Five to seven relevant keywords should be listed directly under the abstract on the same page.
 
-
-%\textbf{Background.} Domestic abuse is increasingly recognised as a serious public health concern worldwide. In the context of England, previous research has suggested that the number of domestic abuse cases reported to the police increase on days when the national football (soccer) team participates in international football tournaments such as the World Cup. Alcohol is hypothesized to be an important factor in this relationship, but its exact role has not been explored yet. We sought to fill this gap by investigating the extent to which alcohol contributes to the link between football and domestic abuse.
-
-
-%\textbf{Methods.} Using a detailed crime dataset recorded between 2010 and 2018 by the second largest police force in England, we conducted a series of negative binomial regressions to investigate the relationship between England's participation in national football tournaments and the daily number of recorded alcohol-related domestic abuse incidents.
-
-
-%\textbf{Findings.} Our results show that the number of reported alcohol-related domestic abuse cases increases by 61\%, 95\% CI [32\% -- 96\%] following an England victory, while there is no comparable increase in the number of non-alcohol related domestic abuse cases. This is a large effect, translating into a 0.43 increase in the daily rate of alcohol-related cases per 100,000 individuals, against a base rate 0.71 cases per 100,000. This effect is specific to male-to-female cases, \TM{Delete if analysis not included} survives various robustness checks, and its time course is strongly consistent with a causal link between England's victory and an increase in alcohol-related domestic abuse.
-
-
-%\textbf{Interpretation.} Alcohol plays an instrumental role in the link between football and domestic abuse. Temporally targeted campaigns could be effective in raising awareness of the adverse effect of football-induced alcohol consumption on the prevalence of domestic abuse.
-
-
-%\textbf{Funding.} None.
-%\end{abstract}
-
-%\newpage
-%\thispagestyle{empty}
-%\textit{\textbf{Research in context}}
-
-
-%\textbf{Evidence before this study} While the link between football, masculinity and domestic abuse have been the focus of considerable scientific research, the exact role of alcohol in this relationship has not been explored yet. We searched the Wiley Online Library, Web of Science, and Google Scholar databases using the search terms \textit{football} and \textit{domestic abuse}, covering the period between 1995 and 2019. We have identified two relevant quantitative studies investigating the link between international football tournaments and domestic abuse, both of which used data from England. One study, using data from the 2010 World Cup, has found that the number of recorded domestic abuse cases increased significantly on England win and loss days, compared to various baseline days. Another study used data from the period of the 2002, 2006, and 2010 World Cups, and found that the number of recorded intimate partner violence cases increase 38\% when England loses, and 26\% when England wins or draws, compared to non-match days. To the best of our knowledge, our study is the first to explore the specific role of alcohol in the nexus between football and domestic abuse.
-
-
-%\textbf{Added value of this study}
-%Using 8 years' worth of detailed crime data from the third largest police force in England, we conducted the most comprehensive investigation of the link between football, alcohol, and domestic abuse up to date, and show that England's participation in international football tournaments results in an increase in the number of alcohol-related domestic abuse cases recorded by the police. We show that the time course of this increase is highly consistent with a causal link between football and alcohol-related domestic abuse. Furthermore, we reconcile our findings with previous, seemingly conflicting results, and demonstrate that it is an England victory, and not and England loss that results in an increase in the number of alcohol-related domestic abuse cases. Our results contribute to the scientific understanding of the factors precipitating domestic abuse.
-
-%\textbf{Implications of all the available evidence}
-%Alcohol consumption is key to the link between football and domestic abuse in England. Public information campaigns raising awareness of this problem could be the first step to reduce the public health risk associated with increased alcohol consumption following an England victory.
 
 \end{titlepage}
 
@@ -138,72 +108,63 @@ This research was funded in part by Economic and Social Research Council grants 
 
 Domestic abuse is increasingly recognised as a major public policy concern in many countries, including the UK \cite{ep}. While anyone can become a victim of domestic abuse, women are disproportionately affected, with more than 25\% of women, and 15\% of men in England and Wales reported to have experienced some form of domestic abuse since the age of 16 \cite{ONS}.
 
-The link between sporting events and domestic abuse has been the focus of a number of smaller studies \cite{Williams2014}, but large-scale quantitative investigations of this relationship are relatively scarce. In England, previous studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and it is by far the most popular sport in the country \cite{Parry2014}, with the 2018 World Cup attracting a record number of 44.5 million viewers \cite{BBC}. These studies have found significant increases in the number of domestic abuse cases recorded by the police on England win, and particularly on England loss days \cite{Brimicombe2012, Kirby2014}. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \cite{Brooks-Hay2018}, these studies, and other qualitative investigations \cite{Swallow} nevertheless suggest that national football tournaments can create an environment where domestic abuse is more likely to occur.
+The link between sporting events and domestic abuse has been the focus of a number of smaller studies \cite{Williams2014}, but large-scale quantitative investigations of this relationship are relatively scarce. In the context of the USA, the most extensive study in the topic found that an unexpected loss of the local National Football League (NFL) team resulted in a 10\% increase in the rate of reported male to female intimate partner violence (IPV; \citeNP{Card2011}.
+
+In England, previous studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and it is by far the most popular sport in the country \cite{Parry2014}, with the 2018 World Cup attracting a record number of 44.5 million viewers \cite{BBC}. These studies have found significant increases in the number of domestic abuse cases recorded by the police on England win, and particularly on England loss days \cite{Brimicombe2012, Kirby2014}. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \cite{Brooks-Hay2018}, these studies, and other qualitative investigations \cite{Swallow} nevertheless suggest that national football tournaments can create an environment where domestic abuse is more likely to occur.
 
 
-%Two studies have investigated the effect of England's participation in the World Cup on the number of reported domestic abuse incidents. Using data on the number of reported domestic abuse cases in the month of the 2010 World Cup tournament, one study has found that the number of reported domestic abuse cases increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew \cite{Brimicombe2012}. Another study has used daily count data from the 2002, 2006 and 2010 World Cups, and found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew \cite{Kirby2014}. These figures were also quoted in a poster campaign launched before the 2018 World Cup, aiming to raise awareness of the link between football and domestic abuse \cite{NCDV}. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \cite{Brooks-Hay2018}, these studies, and other qualitative investigations \cite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
 
 
-Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of ``Englishness'', fuelled by media narratives that often use war references, and an ``us vs. them'' rhetoric to generate and represent an English national identity \cite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine, and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse \cite{Sabo,Swallow}, given susceptibility to such behaviours. We speculate that this observation is especially pertinent in the context of England's participation in national football tournaments, owing to the popularity of the sport in the country, the associated media attention, and the resulting heightened sense of national consciousness. \AT{Not sure if it would be worth adding something on the link between nationalism and masculinity? It would be good to offer a story for potential pathways whilst avoiding having to say something strong which can be attacked} \TM{I lean towards no}
+Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of ``Englishness'', fuelled by media narratives that often use war references, and an ``us vs. them'' rhetoric to generate and represent an English national identity \cite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine, and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse \cite{Sabo,Swallow}, given susceptibility to such behaviours. We speculate that this observation is especially pertinent in the context of England's participation in national football tournaments, owing to the popularity of the sport in the country, the associated media attention, and the resulting heightened sense of national consciousness. 
 
 
 Previous studies found a strong link between alcohol and domestic abuse, suggesting that alcohol can either be seen as a contributing cause, an aggravating factor, or a trigger of violent behaviour in domestic (and other) settings \cite{Leonard2017}. The ecological model of intimate partner violence (IPV; the most common form of domestic abuse) sees IPV as a product of societal, community, relationship, and individual influences. From a community perspective, \citeA{Graham2017} argue that social contexts where excessive drinking is encouraged (e.g., through the promotion of alcohol during sporting events) are often permissive of violent behaviour and sexism, which can increase the likelihood of alcohol-related domestic abuse. However, strong inhibitory factors (e.g., social norms, and more specifically the condemnation of peers) can offset the disinhibitory effect of alcohol consumption, and reduce the likelihood of subsequent perpetration.  
 
-%Qualitative investigations suggest that alcohol has a strong association with domestic abuse \cite{Peralta2010}: those with alcohol-problems are more likely to be perpetrators and, when alcohol is involved, there is evidence that the violence might result in more serious injuries. However, it is generally understood that the role of alcohol should be considered in the context of a range of social, biological and pyschological factors, and that alcohol is not the direct cause of domestic abuse \cite{Javaid2015,Peralta2010}. 
-
-
-%It has been suggested that for some men, drinking and violence plays an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment; \cite{Peralta2010}), some perpetrators use alcohol as a ``shield'' that protects them from being seen as a violent abuser and deflect responsibility \cite{Javaid2015}. 
 
 
 Despite the evident links between alcohol and domestic abuse, the role alcohol plays in the link between football and domestic abuse has not yet been explored in a large-scale quantitative study. Given the strong association between drinking culture and football in England \cite{Dixon2014}, a relationship continuously reinforced by the marketing practices of the alcohol industry \cite{Gornall2014}, we conjecture that alcohol acts as an aggravating factor in the link between football and domestic abuse in England. Exploring the role alcohol plays in this relationship will deepen our understanding of the pathway through which football increases propensity for violence in domestic settings.
 
-To test this hypothesis, we investigate whether the daily number of reported alcohol and non-alcohol related domestic abuse cases recorded by the second largest police force in England (West Midlands Police; WMP) between 2010 and 2019 increase on days when the England national team plays in a national football tournament (the FIFA World Cup and UEFA European Football Championship), and whether the effect, if any, depends on the result of the match.
+In our analysis, we focus on the two largest national football tournaments England participates in, the the FIFA World Cup and UEFA European Football Championship. We exploit the fact that that national teams are randomly allocated (by the random draw of balls from an urn --- the canonical definition of random) to slots in these football tournaments, and the dates of these slots are assigned \emph{before} the allocation of the teams. This allows us to make causal claims about the effect of England matches on alcohol and non-alcohol related domestic abuse. In contrast, \citeA{Card2011} had to rely upon the stochastic nature of game outcomes (after controlling for bookmakers' expectations) to make a causal inference between unexpected losses NFL football and domestic abuse. 
 
-\citeA{Card2011} had to rely upon the stochastic nature of game outcomes (after controlling for bookmakers expectations) to make a causal inference between unexpected losses in college football and domestic abuse. 
-Here, we exploit the fact that national teams are randomly allocated to slots in the tournament structure.
-These slots are assigned to dates \emph{before} the teams are are allocated.
-Allocation of teams is by the random draw of balls from an urn---the canonical definition of random. 
-Thus we can make causal claims about the effect of England matches on domestic abuse.
-Our dataset covers a decade, allowing us to conduct a thorough investigation of the characteristics and temporal pattern of the domestic abuse perpetrated on England match days, and extend our findings to understand various characteristics of this relationship. 
-We also test the robustness of the effect using various model specifications, time periods, and geographical areas. 
+To test our hypothesis, we investigate whether the daily number of reported alcohol and non-alcohol related domestic abuse cases recorded by the second largest police force in England (West Midlands Police; WMP) between 2010 and 2019 increase on days when the England national team plays in a national football tournament (the FIFA World Cup and UEFA European Football Championship), and whether the effect, if any, depends on the result of the match. Our dataset covers a decade, allowing us to conduct a thorough investigation of the characteristics and temporal pattern of the domestic abuse perpetrated on England match days, and extend our findings to understand various characteristics of this relationship. We also test the robustness of the effect using various model specifications, time periods, and geographical areas. 
 
 
 
 \section{West Midlands Crime Dataset}
 
 
-Our dataset comprises all incidents and crimes recorded by the West Midlands Police (WMP) in the period between January 1, 2010 and October 10, 2019 (3570 days). The WMP is the second largest police force in England \cite{Homeoffice}, serving an area with a population over 2.9 million in 2018 \cite{populationfigure}. 
+Our dataset comprises all incidents and crimes recorded by the West Midlands Police (WMP) in the period between January 1, 2010 and October 10, 2019 (3570 days). The WMP is the third largest police force in England \cite{Homeoffice}, serving an area with a population over 2.9 million in 2018 \cite{populationfigure}. 
 
-The WMP records all reported cases in two databases: incidents and crimes. The incidents database records all reports from officers and the public to call centres and police stations. The crimes database includes all cases which, after initial investigation are found to meet the defenition of a notifiable offence \citeNP{HomeOffice2019}, or fall into one of the special categories of "non-crime". These special categories include rape, domestic abuse, child abuse, racially or religiously aggravated cases, and are recorded (e.g. as ``domestic violence incident - non crime'') in the crimes database, even if the investigation finds that they do not qualify as a notifiable offence (e.g. due to lack of evidence).
+The WMP records all reported cases in two databases: incidents and crimes. The incidents database records all reports from officers and the public to call centres and police stations. The crimes database includes all cases which, after initial investigation, are found to meet the definition of a notifiable offence \citeNP{HomeOffice2019}, or fall into one of the special categories of ``non-crime''. These special categories include rape, domestic abuse, child abuse, racially or religiously aggravated cases, and are recorded in the crimes database (e.g., as ``domestic violence incident - non crime''), even if the investigation finds that they do not qualify as a notifiable offence (e.g., due to lack of evidence).
  
-We focus our analyses on the crimes database, as these have been investigated by police. These records therefore contain more data and are more robust and reliable than incident logs. Officers record the age, gender and ethnicity for both victim and offender (note that the victim offender roles are judged and defined by the recording officer), as well as the location and exact time of the crime. 
-In identifying which crimes constitute domestic abuse we include all crime records for specific domestic abuse crimes and non-crimes. There are also a number of crimes which are recorded as non-domestic abuse offences, but which are, or result from domestic abuse. For example, offences of grievous bodily harm. To ensure we identify such cases, we link the records in the crimes database to that of the incidents data. The incidents database contains flags for a number of properties of the incidents \citeNP{HomeOffice2011}, one of which is domestic abuse. Thus, any non-domestic abuse crimes were identified as domestic abuse if they also had such a domestic abuse flag in a linked incident record.
+We focus our analyses on the crimes database, as these cases have been investigated by police. These records therefore contain more data and are more robust and reliable than incident logs. Officers record the age, gender and ethnicity for both victim and offender (note that the victim offender roles are judged and defined by the recording officer), as well as the location and exact time of the crime. 
+In identifying which crimes constitute domestic abuse, we include all crime records for specific domestic abuse crimes and non-crimes. There are also a number of crimes which are recorded as non-domestic abuse offences, but which are, or result from domestic abuse (e.g., grievous bodily harm). To ensure we identify such cases, we link the records in the crimes database to that of the incidents data. The incidents database contains flags for a number of properties of the incidents \citeNP{HomeOffice2011}, including ``domestic abuse'' and ``alcohol''. Thus, any non-domestic abuse crimes were identified as domestic abuse if they also had such a domestic abuse flag in a linked incident record.
 
-When identifying whether alcohol was involved, we primarily rely upon the specific alcohol flag in the crime record. When an officer records a crime, they must select any flags that are relevant to the case and one of these is "Alcohol Involvement". THe defenition for this is prescribed by the UK home office ``any notifiable offence (crime) where it is perceived, by the victim or any other person, that the effects of alcohol consumption on the offender or victim was an aggravating factor'' \cite{Office2019}. Note that this definition applies to the incident in general, not to either the offender or victim specifically. Since this flag must be actively selected by the recording officer, there is a potential for under reporting. To ameliorate this, we also examined the free text records of the associated incident log. If any linked incident record contained the keyword "alcohol*" \TM{Which sepcific set of keywords did we use?} then it was also identified as alcohol related.
+When identifying whether alcohol was involved, we primarily rely upon the specific alcohol flag in the crime record. When an officer records a crime, they must select any flags that are relevant to the case and one of these is ``alcohol involvement''. The definition for this is prescribed by the UK Home Office ``any notifiable offence (crime) where it is perceived, by the victim or any other person, that the effects of alcohol consumption on the offender or victim was an aggravating factor'' \cite{Office2019}. Note that this definition applies to the incident in general, not to either the offender or victim specifically. Since this flag must be actively selected by the recording officer, there is a potential for under reporting. To ameliorate this, we again relied on the flags in the incidents data, and also examined the free text records of the associated incident log. If any linked incident record contained a reference to alcohol (either in the free text or as a flag) then it was also identified as alcohol related.
  
+ \TM{Which sepcific set of keywords did we use?} \AT{keywords1-4 and qualifier}
  
+ %\TM{ I think get rid of all of this:}
  
- \TM{ I think get rid of all of this:}
- 
-Most reported cases will be initially recorded as an incident (and then later might be also recorded as a crime after investigation), with a smaller fraction immediately recorded as crime (if it is clear that it meets the criteria for notifiable offences, \citeNP{HomeOffice2019} \citeNP{HomeOffice2019}). For this reason, some recorded crimes will have matching incident entries, while others will not. As an exception, specific types of reported cases (e.g., rape, domestic abuse, child abuse, racially or religiously aggravated cases) that do not qualify as a crime after being investigated (e.g., due to lack of evidence), still get recorded in the crimes database with the indicator ``non crime'' (e.g., ``domestic violence incident - non crime'').
+%Most reported cases will be initially recorded as an incident (and then later might be also recorded as a crime after investigation), with a smaller fraction immediately recorded as crime (if it is clear that it meets the criteria for notifiable offences, \citeNP{HomeOffice2019} \citeNP{HomeOffice2019}). For this reason, some recorded crimes will have matching incident entries, while others will not. As an exception, specific types of reported cases (e.g., rape, domestic abuse, child abuse, racially or religiously aggravated cases) that do not qualify as a crime after being investigated (e.g., due to lack of evidence), still get recorded in the crimes database with the indicator ``non crime'' (e.g., ``domestic violence incident - non crime'').
 
 
-The incidents dataset contains a list of markers capturing various key aspects of the reported case, which are recorded in the call centre when the case is being reported. Most of these markers are common across police forces in England (e.g., domestic abuse, alcohol, drugs, mental health, etc.; \citeNP{HomeOffice2011}). 
-These then could be used to assess the severity of case (and support the decision as to whether police attendance is required). 
-In contrast, each case in the crimes dataset had been attended by the police, and therefore contains detailed information about the offence that took place, the gender, age, and ethnicity of the victim and offender, and the location and exact time of the crime. 
-The role of the victim and the offender was determined by the police. 
-A separate alcohol marker exists in the crimes dataset.
+%The incidents dataset contains a list of markers capturing various key aspects of the reported case, which are recorded in the call centre when the case is being reported. Most of these markers are common across police forces in England (e.g., domestic abuse, alcohol, drugs, mental health, etc.; \citeNP{HomeOffice2011}). 
+%These then could be used to assess the severity of case (and support the decision as to whether police attendance is required). 
+%In contrast, each case in the crimes dataset had been attended by the police, and therefore contains detailed information about the offence that took place, the gender, age, and ethnicity of the victim and offender, and the location and exact time of the crime. 
+%The role of the victim and the offender was determined by the police. 
+%A separate alcohol marker exists in the crimes dataset.
 
-Given that much more information is recorded about crimes than incidents, we decided to restrict our analysis to entries in the crimes dataset (i.e., cases that have been investigated by the police), and use only matching entries from the incidents dataset (if any), which provide additional useful call centre-recorded information about the nature of each case. 
-This allows us to identify if a recorded serious crime (e.g., grievous bodily harm) was domestic abuse-related. 
-However, our main results do not change if we only use information contained in the crimes dataset (i.e., domestic abuse cases that after investigation, did not qualify as a crime) or include both crimes and incidents in the analysis (i.e., domestic abuse cases that had been investigated and suspected domestic abuse cases that had not been investigated).   
+%Given that much more information is recorded about crimes than incidents, we decided to restrict our analysis to entries in the crimes dataset (i.e., cases that have been investigated by the police), and use only matching entries from the incidents dataset (if any), which provide additional useful call centre-recorded information about the nature of each case. 
+%This allows us to identify if a recorded serious crime (e.g., grievous bodily harm) was domestic abuse-related. 
+%However, our main results do not change if we only use information contained in the crimes dataset (i.e., domestic abuse cases that after investigation, did not qualify as a crime) or include both crimes and incidents in the analysis (i.e., domestic abuse cases that had been investigated and suspected domestic abuse cases that had not been investigated).   
 
-We coded each reported case as domestic abuse-related if (1) in the crime dataset the offence description explicitly stated so (either ``domestic violence incident'' or ``coercive/controlling behaviour in a domestic setting'') or (2) one of the linked incident markers (if any) stated ``domestic violence''. This method ensured that we used all information available to us to identify domestic-abuse related cases. 
+%We coded each reported case as domestic abuse-related if (1) in the crime dataset the offence description explicitly stated so (either ``domestic violence incident'' or ``coercive/controlling behaviour in a domestic setting'') or (2) one of the linked incident markers (if any) stated ``domestic violence''. This method ensured that we used all information available to us to identify domestic-abuse related cases. 
 
-To determine whether a case was alcohol-related, we again collated information from markers found in the incidents and crimes dataset and created an alcohol flag if any of these markers contained the word ``alcohol''. The main source of information on alcohol-involvement is the crime dataset, where the recording officer has to choose either ``Yes'' or ``No'' to indicate whether the case was alcohol-related. According to the Home Office Counting Rules for Recorded Crime, alcohol-related crimes are defined as ``any notifiable offence (crime) where it is perceived, by the victim or any other person, that the
-effects of alcohol consumption on the offender or victim was an aggravating factor'' \cite{Office2019}. Unfortunately, it is not specified who was under the influence of alcohol (victim, offender, or both). In addition, it is possible that this flag is an underestimation of the true number of alcohol-related cases, as one could reasonably expect it to be more likely that ``No'' will be selected for an alcohol-related case than the other way around, due to human error. 
+%To determine whether a case was alcohol-related, we again collated information from markers found in the incidents and crimes dataset and created an alcohol flag if any of these markers contained the word ``alcohol''. The main source of information on alcohol-involvement is the crime dataset, where the recording officer has to choose either ``Yes'' or ``No'' to indicate whether the case was alcohol-related. According to the Home Office Counting Rules for Recorded Crime, alcohol-related crimes are defined as ``any notifiable offence (crime) where it is perceived, by the victim or any other person, that the
+%effects of alcohol consumption on the offender or victim was an aggravating factor'' \cite{Office2019}. Unfortunately, it is not specified who was under the influence of alcohol (victim, offender, or both). In addition, it is possible that this flag is an underestimation of the true number of alcohol-related cases, as one could reasonably expect it to be more likely that ``No'' will be selected for an alcohol-related case than the other way around, due to human error. 
 
-\TM{ends here}
+%\TM{ends here}
 
  Overall there were 427,351 reported cases of domestic abuse in this 10-year period, comprising 17\% of all recorded crimes and incidents. Of these cases, 26\% were alcohol-related (in contrast, only 9\% of non domestic abuse cases are alcohol-related). In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.42--3.95 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.84--1.67 cases per 100,000 individuals (the overall rate falls between 2.4 and 5.01 per 100,000 individuals). 
 
@@ -262,6 +223,8 @@ Table \ref{Tab:matches} shows the matches of the English national football team 
 
 \section{Methods}
 
+\AT{Neil I think you had a comment about this section but I can't recall what it was}
+
 To investigate the role alcohol plays in the link between England football matches and domestic abuse, we used a regression framework. Our main results are derived from Poisson and Negative Binomial regressions, where each observation is a day or a three-hour interval in the period between 2010 and 2019, and the outcome variable is the number of cases perpetrated in an observation period. To investigate certain characteristics of the domestic abuse cases perpetrated on England match days, we also used a logistic regression framework. Below is a detailed explanation of the statistical models used in our analyses.  
 
 
@@ -272,7 +235,7 @@ To investigate the role alcohol plays in the link between England football match
 In these regressions, each day in our dataset is an observation (of which there are 3570), and the outcome variable is the number of domestic abuse cases perpetrated on that day (alcohol-related or not). We classified each day in this period as one of the following: England won (England win, $N = 8$), lost (England lost, $N = 8$) or drew (England draw, $N = 6$), a day after an England match day (After England, $N = 22$), any other day during the months of the tournament (Tournament on, $N = 106$), or any other day during the rest of the year (Non-match day, $N = 3420$). Our aim is to understand the extent to which this classification variable can explain the number of alcohol-related and non-alcohol related cases reported to the police.
 
 To control for potential confounders and account for the temporal variability of the number of domestic abuse cases, we also added a set of dummy  variables, including day of the week, calendar month, and year. 
-We included a dummy for Christmas cases (covering the period between 24th and 26th of December) and New Year's Eve cases (in the early morning of 1st of January). 
+We included a dummy for Christmas cases (covering the period between 24th and 26th of December) and New Year's Eve cases (cases perpetrated on the 1st of January). 
 These holidays are consistently associated with an increased number of domestic abuse cases reported to the police, therefore including these will result in a more precise estimate of the association between football and domestic abuse.
 
 Given that our outcome variable is a count, we considered using a Poisson or a negative binomial regression model framework. 
@@ -316,7 +279,7 @@ where \textbf{x\textsubscript{i}} is a vector of covariates, and $\boldsymbol{\b
 
 \section{Results}
 
-In the following count data analyses, we present results from negative binomial models, as we found evidence for overdispersion in all cases (after testing for overdispersion using the method described in \citeNP{Cameron1990a}). All analyses were performed in R (version 3.6.2).
+In the following count data analyses, we mainly present results from negative binomial models, as we found evidence for overdispersion in almost all cases (after testing for overdispersion using the method described in \citeNP{Cameron1990a}). All analyses were performed in R (version 3.6.2).
 
 
 \subsection{Core results} 
@@ -338,7 +301,7 @@ Table \ref{coremodel} shows the results from two negative binomial regressions i
 \\[-1.8ex] & (1) & (2)\\ 
 %\hline \\[-1.8ex] 
 \hline \\[-1.8ex] 
-Tournament on & 1.024 & 0.984 \\ 
+ Tournament on & 1.024 & 0.984 \\ 
   & (0.986, 1.064) & (0.935, 1.037) \\ 
   & & \\ 
  England win & 0.950 & 1.469$^{***}$ \\ 
@@ -350,7 +313,7 @@ Tournament on & 1.024 & 0.984 \\
  England lost & 1.033 & 1.129 \\ 
   & (0.915, 1.167) & (0.963, 1.324) \\ 
   & & \\ 
- After England & 1.056 & 1.181$^{**}$ \\ 
+ After England  & 1.056 & 1.181$^{**}$ \\ 
   & (0.979, 1.140) & (1.069, 1.305) \\ 
 \hline \\[-1.8ex] 
 Observations & 3,570 & 3,570 \\ 
