--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -166,7 +166,7 @@ When identifying whether alcohol was involved, we primarily rely upon the specif
 
 %\TM{ends here}
 
- Overall there were 427,351 reported cases of domestic abuse in this 10-year period, comprising 17\% of all recorded crimes and incidents. Of these cases, 26\% were alcohol-related (in contrast, only 9\% of non domestic abuse cases are alcohol-related). In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.42--3.95 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.84--1.67 cases per 100,000 individuals (the overall rate falls between 2.4 and 5.01 per 100,000 individuals). 
+ Overall there were 425,764 reported cases of domestic abuse in this 10-year period, comprising 17\% of all recorded crimes and incidents. Of these cases, 26\% were alcohol-related (in contrast, only 9\% of non domestic abuse cases are alcohol-related). In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.42--3.95 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.84--1.67 cases per 100,000 individuals (the overall rate falls between 2.4 and 5.01 per 100,000 individuals). 
 
 Figure \ref{fig:descriptive} shows the daily average number of alcohol and non-alcohol related domestic abuse cases reported to WMP by day of the week. The reported number of domestic abuse cases, and particularly alcohol-related cases shows strong variation throughout the week, with generally fewer reported cases mid-week, and a pronounced increase over the weekend. 
 
@@ -302,19 +302,19 @@ Table \ref{coremodel} shows the results from two negative binomial regressions i
 %\hline \\[-1.8ex] 
 \hline \\[-1.8ex] 
  Tournament on & 1.024 & 0.984 \\ 
-  & (0.986, 1.064) & (0.935, 1.037) \\ 
+  & [0.986, 1.064] & [0.935, 1.037] \\ 
   & & \\ 
  England win & 0.950 & 1.469$^{***}$ \\ 
-  & (0.838, 1.077) & (1.259, 1.714) \\ 
+  & [0.838, 1.077] & [1.259, 1.714] \\ 
   & & \\ 
  England draw & 1.045 & 1.145 \\ 
-  & (0.905, 1.208) & (0.955, 1.375) \\ 
+  & [0.905, 1.208] & [0.955, 1.375] \\ 
   & & \\ 
  England lost & 1.033 & 1.129 \\ 
-  & (0.915, 1.167) & (0.963, 1.324) \\ 
+  & [0.915, 1.167] & [0.963, 1.324] \\ 
   & & \\ 
  After England  & 1.056 & 1.181$^{**}$ \\ 
-  & (0.979, 1.140) & (1.069, 1.305) \\ 
+  & [0.979, 1.140] & [1.069, 1.305] \\ 
 \hline \\[-1.8ex] 
 Observations & 3,570 & 3,570 \\ 
 %Log Likelihood & $-$14,692.790 & $-$12,071.110 \\ 
@@ -327,7 +327,7 @@ Notes:
 \end{tabular} 
 \begin{tablenotes}
       \item[a] \textit{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001}
-      \item[b] \textit{Estimates are exponentiated coefficients from negative binomial regressions with non-match day as benchmark; controls include day of week, month, year, Christmas, and New Year's Eve}
+      \item[b] \textit{Estimates are exponentiated coefficients from negative binomial regressions with non-match day as benchmark; controls include day of week, month, year, Christmas, and New Year's Eve; 95\% confidence intervals are in square brackets}
     \end{tablenotes}
 \end{threeparttable} 
 \end{table*}
@@ -347,63 +347,14 @@ Notes:
 \end{figure}
 
  To further understand the characteristics of this increase, we exploited the detailed time information in our dataset, which allowed us to conduct a three-hour analysis to explore the finer temporal patterns of domestic abuse cases (alcohol-related or not) perpetrated before and after an England match. Figure \ref{fig:threehours} shows a plot of the estimated percentage increase from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. While a similar pattern can be observed on days when England lost, the increase in the number of alcohol-related cases is substantially smaller and not statistically different from zero.
+ 
+ We also examined how these patterns vary by the gender of the victim and the offender. Table \ref{gender} in the Appendix shows the results by alcohol-involvement and victim-offender gender group (male to female, female to male, male to male, female to female), on a sample of domestic abuse cases with one victim and offender, where gender information is available (about 86\% of domestic abuse cases). In line with our previous results, we find a 41\%, 95\% CI [18\%--69\%], increase in the group of alcohol-related male to female cases on England win days, and a 17\%, 95\% CI [5\%--31\%] increase on days following and England match. We find no evidence for comparable increases in other gender groups, however, it should be noted that substantial differences in the number of cases by gender group (e.g., 78\% of cases are male to female, 10\% of cases are female to male, 7\% are male to male, and 5\% are female to female) hinders a precise estimation of the of football on alcohol and non-alcohol related domestic abuse. 
 
 
-\subsection{gender}
- \begin{sidewaystable}[htp]
-%\begin{table}[!htbp] \centering 
-  \caption{} 
-  \label{} 
-\begin{tabular}{@{\extracolsep{5pt}}lcccccccc} 
-\\[-1.8ex]\hline 
-\hline \\[-1.8ex] 
- & \multicolumn{8}{c}{\textit{Dependent variable:}} \\ 
-  & \multicolumn{8}{c}{Number of domestic abuse cases} \\ 
-  & \multicolumn{4}{c}{Non-alcohol related} &\multicolumn{4}{c}{Alcohol-related} \\
-\cline{2-9} 
-\\[-1.8ex] & MF & FM & MM & FF & MF & FM & MM & FF \\ 
-\\[-1.8ex] & \textit{negative} & \textit{negative} & \textit{negative} & \textit{negative} & \textit{negative} & \textit{negative} & \textit{Poisson} & \textit{Poisson} \\ 
- & \textit{binomial} & \textit{binomial} & \textit{binomial} & \textit{binomial} & \textit{binomial} & \textit{binomial} & \textit{} & \textit{} \\ 
-\\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8)\\ 
-\hline \\[-1.8ex] 
-   Tournament on & 1.027 & 1.042 & 1.005 & 0.919 & 0.982 & 1.093 & 0.981 & 0.858 \\ 
-  & (0.984, 1.071) & (0.958, 1.132) & (0.910, 1.107) & (0.824, 1.024) & (0.925, 1.043) & (0.959, 1.244) & (0.835, 1.146) & (0.692, 1.056) \\ 
-  & & & & & & & & \\ 
- England win & 0.929 & 1.043 & 0.949 & 0.787 & 1.415$^{***}$ & 1.382 & 0.883 & 1.084 \\ 
-  & (0.808, 1.068) & (0.798, 1.346) & (0.686, 1.279) & (0.538, 1.109) & (1.183, 1.689) & (0.923, 2.001) & (0.483, 1.466) & (0.539, 1.926) \\ 
-  & & & & & & & & \\ 
- England draw & 0.963 & 1.177 & 1.210 & 1.024 & 1.263$^{*}$ & 1.162 & 0.789 & 0.996 \\ 
-  & (0.819, 1.133) & (0.847, 1.603) & (0.836, 1.696) & (0.651, 1.529) & (1.031, 1.544) & (0.710, 1.808) & (0.392, 1.399) & (0.450, 1.886) \\ 
-  & & & & & & & & \\ 
- England lost & 1.041 & 0.987 & 0.916 & 0.903 & 1.037 & 1.441$^{*}$ & 1.329 & 1.428 \\ 
-  & (0.912, 1.191) & (0.755, 1.274) & (0.664, 1.233) & (0.635, 1.245) & (0.860, 1.249) & (0.994, 2.033) & (0.842, 1.984) & (0.813, 2.311) \\ 
-  & & & & & & & & \\ 
- After England & 1.044 & 1.058 & 1.005 & 0.969 & 1.173$^{**}$ & 1.282$^{*}$ & 1.117 & 1.011 \\ 
-  & (0.960, 1.135) & (0.897, 1.242) & (0.828, 1.210) & (0.783, 1.186) & (1.046, 1.315) & (0.999, 1.626) & (0.817, 1.489) & (0.666, 1.470) \\ 
-  & & & & & & & & \\ 
-\hline \\[-1.8ex] 
-Observations & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 \\ 
-%Log Likelihood & $-$13,745.870 & $-$8,771.909 & $-$7,712.245 & $-$7,252.401 & $-$10,810.720 & $-$6,895.397 & $-$5,807.926 & $-$4,622.806 \\ 
-%$\theta$ & 47.186$^{***}$  (2.010) & 40.159$^{***}$  (5.651) & 72.089$^{***}$  (24.259) & 92.343$^{**}$  (44.780) & 40.498$^{***}$  (2.984) & 28.337$^{***}$  (6.809) &  &  \\ 
-%Akaike Inf. Crit. & 27,559.750 & 17,611.820 & 15,492.490 & 14,572.800 & 21,689.440 & 13,858.790 & 11,683.850 & 9,313.612 \\ 
-\hline 
-\hline \\[-1.8ex] 
-\textit{Note:}  & \multicolumn{8}{r}{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001} \\ 
-\end{tabular} 
-%\end{table}
-\end{sidewaystable}
-
-\newpage
 
 \subsection{Other types of crimes and incidents}
 
 Our crime dataset further allows us to explore whether England games have similar effects on other types of criminal behaviours, apart from domestic abuse. Specifically, we are interested in how an England match day affects the number of reported property-related crimes (where the offence class is either theft or robbery), hate crimes (where the offence description includes the words ``hate'', ``racial'' or ``racially''), and other violent crimes (where the offence class is classified as violence against the person, after excluding cases of domestic abuse). Of particular interest is the effect of football on non-domestic violent crimes, since it is possible that alcohol-fuelled violence that follows an England victory is not limited to family and intimate partner relationships. 
-
-\AT{I think we should say something about how detecting alcohol-involvement varies by crime type- e.g., for domestic abuse we have greater confidence in identifying alcohol-related cases as opposed to property-related crimes}
-
-
-Table \ref{othercrimes} shows the results for these three types of criminal behaviours, by alcohol-involvement. Compared to non-match days, hate crimes and incidents with no alcohol-involvement increase by 12\%, 95\% CI [3\%--22\%], during the months of the tournaments. Similarly, compared to non-match days, alcohol-related thefts and robberies (property-related offences) increase by 10\%, 95\% CI [1\%--19\%], when the tournament is on, and by 29\%, 95\% CI [0\%--66\%] \NS{CI in table extends just below 1, so how is this significant at 5\% level?} \AT{Not sure, non-exponentiated coeff is 0.255074 with cis  -0.002222273  0.508061271 and p-value is 0.048256}, when England wins, although these estimates are not very precise (demonstrated by the width of the confidence intervals), due to the relatively small number of alcohol-related theft and robbery cases. In contrast, the effect of an England win on alcohol-related cases clearly extends to other, non-domestic violent offences, resulting in a 47\%, 95\% CI [19\%--83\%], increase compared to non-match days. While it is possible that misclassified domestic abuse cases contribute to this result (e.g, if the victim chooses not to disclose any relationship to the offender), these results suggests that the increase in alcohol-related violence following an England victory is not limited to domestic settings. \NS{What happened to the analysis showing that this was especially true for male-to-female abuse?}
-
 
 
   \begin{sidewaystable}[htp]
@@ -423,19 +374,20 @@ Table \ref{othercrimes} shows the results for these three types of criminal beha
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
   Tournament on & 1.120$^{**}$ & 1.014 & 1.035 & 1.099 & 1.099$^{*}$ & 1.060 \\ 
-  & (1.030, 1.216) & (0.986, 1.043) & (0.986, 1.085) & (0.914, 1.316) & (1.011, 1.194) & (0.987, 1.139) \\ 
+  & [1.030, 1.216] & [0.986, 1.043] & [0.986, 1.085] & [0.914, 1.316] & [1.011, 1.194] & [0.987, 1.139] \\ 
   & & & & & & \\ 
- England win & 1.002 & 0.961 & 1.085 & 1.556 & 1.291$^{*}$ & 1.473$^{***}$ \\ 
-  & (0.759, 1.311) & (0.879, 1.052) & (0.935, 1.263) & (0.902, 2.558) & (0.998, 1.662) & (1.192, 1.826) \\ 
+ England win & 1.002 & 0.961 & 1.085 & 1.556 & 1.291 & 1.473$^{***}$ \\ 
+  & [0.759, 1.311] & [0.879, 1.052] & [0.935, 1.263] & [0.902, 2.558] & [0.998, 1.662] & [1.192, 1.826] \\ 
   & & & & & & \\ 
  England draw & 0.993 & 0.953 & 0.970 & 0.848 & 0.934 & 1.251 \\ 
-  & (0.709, 1.369) & (0.859, 1.059) & (0.810, 1.167) & (0.400, 1.624) & (0.701, 1.237) & (0.974, 1.613) \\ 
+  & [0.709, 1.369] & [0.859, 1.059] & [0.810, 1.167] & [0.400, 1.624] & [0.701, 1.237] & [0.974, 1.613] \\ 
   & & & & & & \\ 
  England lost & 0.984 & 0.974 & 1.066 & 0.760 & 1.008 & 0.988 \\ 
-  & (0.744, 1.288) & (0.890, 1.066) & (0.917, 1.243) & (0.363, 1.427) & (0.744, 1.353) & (0.785, 1.247) \\ 
+  & [0.744, 1.288] & [0.890, 1.066] & [0.917, 1.243] & [0.363, 1.427] & [0.744, 1.353] & [0.785, 1.247] \\ 
   & & & & & & \\ 
  After England & 1.124 & 0.978 & 1.085 & 1.244 & 1.047 & 1.092 \\ 
-  & (0.953, 1.323) & (0.925, 1.035) & (0.988, 1.193) & (0.872, 1.742) & (0.884, 1.237) & (0.948, 1.258) \\ 
+  & [0.953, 1.323] & [0.925, 1.035] & [0.988, 1.193] & [0.872, 1.742] & [0.884, 1.237] & [0.948, 1.258] \\
+
  % & & & & & & \\ 
 \hline \\[-1.8ex] 
 Observations & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 \\ 
@@ -448,52 +400,13 @@ Observations & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 \\
 \end{tabular} 
 \begin{tablenotes}
       \item[a] \textit{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001}
-      \item[b] \textit{Estimates are exponentiated coefficients from a series of negative binomial regressions with non-match day as benchmark; controls include day of week, month, year, Christmas, and New Year's Eve}
+      \item[b] \textit{Estimates are exponentiated coefficients from a series of negative binomial regressions with non-match day as benchmark; controls include day of week, month, year, Christmas, and New Year's Eve; 95\% confidence intervals are in square brackets}
     \end{tablenotes}
 \end{threeparttable} }
 \end{sidewaystable}
 
+Table \ref{othercrimes} shows the results for these three types of criminal behaviours, by alcohol-involvement. Compared to non-match days, hate crimes and incidents with no alcohol-involvement increase by 12\%, 95\% CI [3\%--22\%], during the months of the tournaments. Similarly, compared to non-match days, alcohol-related thefts and robberies (property-related offences) increase by 10\%, 95\% CI [1\%--19\%], when the tournament is on. The effect of an England win on alcohol-related cases clearly extends to other, non-domestic violent offences, resulting in a 47\%, 95\% CI [19\%--83\%], increase compared to non-match days. While it is possible that misclassified domestic abuse cases contribute to this result (e.g, if the victim chooses not to disclose any relationship to the offender), these results suggests that the increase in alcohol-related violence following an England victory is not limited to domestic settings. 
 
-
- \begin{sidewaystable}[htp]
-%\begin{table}[!htbp] \centering 
-  \caption{} 
-  \label{othervgender} 
-\begin{tabular}{@{\extracolsep{5pt}}lcccccccc} 
-\\[-1.8ex]\hline 
-\hline \\[-1.8ex] 
- & \multicolumn{8}{c}{\textit{Dependent variable:}} \\ 
-  & \multicolumn{8}{c}{Number of other violent cases (excluding domestic abuse)} \\ 
-  & \multicolumn{4}{c}{Non-alcohol related} &\multicolumn{4}{c}{Alcohol-related} \\
-\cline{2-9} 
-\\[-1.8ex] & MF & FM & MM & FF & MF & FM & MM & FF \\  
-\\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8)\\ 
-\hline \\[-1.8ex] 
-  Tournament on & 1.069 & 1.090 & 1.036 & 1.058 & 1.139 & 0.859 & 1.108 & 0.992 \\ 
-  & (0.984, 1.162) & (0.965, 1.229) & (0.973, 1.102) & (0.961, 1.165) & (0.973, 1.330) & (0.638, 1.140) & (0.962, 1.276) & (0.784, 1.248) \\ 
-  & & & & & & & & \\ 
- England win & 1.068 & 0.994 & 0.991 & 1.187 & 1.386 & 1.408 & 1.410 & 0.840 \\ 
-  & (0.827, 1.383) & (0.684, 1.425) & (0.812, 1.204) & (0.896, 1.572) & (0.879, 2.129) & (0.653, 2.770) & (0.918, 2.115) & (0.361, 1.719) \\ 
-  & & & & & & & & \\ 
- England draw & 0.886 & 1.380 & 0.910 & 0.818 & 1.199 & 1.167 & 1.031 & 0.866 \\ 
-  & (0.631, 1.238) & (0.878, 2.121) & (0.706, 1.163) & (0.540, 1.213) & (0.658, 2.067) & (0.391, 2.827) & (0.600, 1.696) & (0.344, 1.905) \\ 
-  & & & & & & & & \\ 
- England lost & 0.973 & 1.246 & 0.979 & 0.970 & 0.935 & 0.310 & 0.945 & 1.303 \\ 
-  & (0.746, 1.272) & (0.868, 1.774) & (0.800, 1.193) & (0.708, 1.320) & (0.544, 1.533) & (0.050, 1.023) & (0.575, 1.494) & (0.644, 2.454) \\ 
-  & & & & & & & & \\ 
- After England & 1.003 & 1.154 & 1.087 & 1.134 & 0.701 & 0.867 & 1.420$^{**}$ & 1.051 \\ 
-  & (0.850, 1.184) & (0.917, 1.445) & (0.963, 1.225) & (0.943, 1.362) & (0.478, 0.999) & (0.476, 1.475) & (1.092, 1.833) & (0.663, 1.612) \\ 
-\hline \\[-1.8ex] 
-Observations & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 \\ 
-%Log Likelihood & $-$13,745.870 & $-$8,771.909 & $-$7,712.245 & $-$7,252.401 & $-$10,810.720 & $-$6,895.397 & $-$5,807.926 & $-$4,622.806 \\ 
-%$\theta$ & 47.186$^{***}$  (2.010) & 40.159$^{***}$  (5.651) & 72.089$^{***}$  (24.259) & 92.343$^{**}$  (44.780) & 40.498$^{***}$  (2.984) & 28.337$^{***}$  (6.809) &  &  \\ 
-%Akaike Inf. Crit. & 27,559.750 & 17,611.820 & 15,492.490 & 14,572.800 & 21,689.440 & 13,858.790 & 11,683.850 & 9,313.612 \\ 
-\hline 
-\hline \\[-1.8ex] 
-\textit{Note:}  & \multicolumn{8}{r}{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001} \\ 
-\end{tabular} 
-%\end{table}
-\end{sidewaystable}
 
 
 
@@ -521,19 +434,20 @@ Table \ref{rugby} shows no comparable effects for rugby matches on domestic abus
 \\[-1.8ex] & (1) & (2)\\ 
 \hline \\[-1.8ex] 
 Tournament on & 0.980 & 0.969 \\ 
-  & (0.947, 1.014) & (0.923, 1.017) \\ 
+  & [0.947, 1.014] & [0.923, 1.017] \\ 
   & & \\ 
  England win & 0.967 & 1.058 \\ 
-  & (0.906, 1.033) & (0.973, 1.151) \\ 
+  & [0.906, 1.033] & [0.973, 1.151] \\ 
   & & \\ 
  England draw & 1.030 & 0.966 \\ 
-  & (0.810, 1.318) & (0.716, 1.308) \\ 
+  & [0.810, 1.318] & [0.716, 1.308] \\ 
   & & \\ 
  England lost & 1.067 & 0.989 \\ 
-  & (0.963, 1.184) & (0.867, 1.129) \\ 
+  & [0.963, 1.184] & [0.867, 1.129] \\ 
   & & \\ 
  After England & 0.983 & 1.004 \\ 
-  & (0.929, 1.041) & (0.931, 1.083) \\ 
+  & [0.929, 1.041] & [0.931, 1.083] \\ 
+
  % & & \\ 
 \hline \\[-1.8ex] 
 Observations & 3,570 & 3,570 \\ 
@@ -939,347 +853,60 @@ For victims, domestic abuse does not occur once every four years following a foo
 
 
 
-\section*{Supplemental Material}
+\section*{Appendix}
 
-%\renewcommand{\thetable}{S\arabic{table}}
-%\renewcommand{\thefigure}{S\arabic{figure}}
-%\setcounter{table}{0}
-%\setcounter{figure}{0}
-%
-%\begin{table}[htp]
-%\centering
-% \caption{Non-domestic violent cases by gender}
-%  \label{otherviolence_gender}
-% \scalebox{0.9}{
-%   \begin{threeparttable}
-%\begin{tabular}{@{\extracolsep{5pt}}lcccc} 
-%\\[-1.8ex]\hline 
-%\hline \\[-1.8ex] 
-% & \multicolumn{4}{c}{\textit{Dependent variable:}} \\ 
-%\cline{2-5} 
-%\\[-1.8ex] & \multicolumn{4}{c}{Number of other violent abuse cases per day} \\ 
-%\\
-% & Male & Male & Female & Female \\ 
-% & to Male & to Female & to Female & to Male \\ 
-%\\[-1.8ex] & (1) & (2) & (3) & (4)\\ 
-%\hline \\[-1.8ex] 
-%% Alcohol & $-$0.900$^{***}$ & $-$0.891$^{***}$ & $-$0.864$^{***}$ & $-$0.921$^{***}$ \\ 
-%%  & (0.048) & (0.033) & (0.080) & (0.066) \\ 
-%  Tournament on & 0.037 & 0.050$^{**}$ & 0.041 & 0.051 \\ 
-%  & (0.026) & (0.021) & (0.038) & (0.036) \\ 
-%  England win & 0.013 & 0.019 & $-$0.031 & 0.174 \\ 
-%  & (0.082) & (0.067) & (0.111) & (0.112) \\ 
-%  England draw & 0.089 & 0.012 & 0.115 & 0.042 \\ 
-%  & (0.094) & (0.078) & (0.139) & (0.132) \\ 
-%  England loss & 0.018 & 0.028 & 0.088 & 0.118 \\ 
-%  & (0.082) & (0.066) & (0.114) & (0.108) \\ 
-%  After England & 0.085 & 0.070 & 0.181$^{**}$ & 0.149$^{**}$ \\ 
-%  & (0.050) & (0.042) & (0.071) & (0.067) \\ 
-%  Alcohol:Tournament on & $-$0.027 & $-$0.086$^{**}$ & $-$0.077 & $-$0.167$^{**}$ \\ 
-%  & (0.055) & (0.038) & (0.087) & (0.073) \\ 
-%  Alcohol:England win & 0.391$^{**}$ & 0.613$^{***}$ & 0.441$^{*}$ & $-$0.114 \\ 
-%  & (0.158) & (0.109) & (0.251) & (0.199) \\ 
-%  Alcohol:England draw & 0.071 & 0.102 & 0.127 & $-$0.337 \\ 
-%  & (0.192) & (0.137) & (0.361) & (0.254) \\ 
-%  Alcohol:England loss & 0.296$^{*}$ & 0.057 & $-$0.023 & 0.027 \\ 
-%  & (0.153) & (0.112) & (0.237) & (0.207) \\ 
-%  Alcohol:After England & 0.208$^{*}$ & 0.053 & $-$0.119 & $-$0.158 \\ 
-%  & (0.100) & (0.072) & (0.163) & (0.136) \\ 
-% \hline \\[-1.8ex] 
-%Number of days & 3,017 & 3,017 & 3,017 & 3,017 \\ 
-%%Log Likelihood & $-$17,204.240 & $-$21,360.820 & $-$13,708.300 & $-$14,378.320 \\ 
-%%$\theta$ & 44.231$^{***}$  (2.800) & 43.449$^{***}$  (1.546) & 24.998$^{***}$  (1.919) & 35.978$^{***}$  (3.376) \\ 
-%%Akaike Inf. Crit. & 34,540.480 & 42,853.640 & 27,548.590 & 28,888.630 \\ 
-%\hline 
-%\hline \\[-1.8ex] 
-%%\textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
-%\end{tabular} 
-%\begin{tablenotes}
-%     \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
-%      \item[b] \textit{Estimates are exponentiated coefficients from a series of negative binomial regressions (based on tests of overdispersion)  with year, month, day of week, Christmas, New Year's eve controls interacted with alcohol; standard errors in parentheses}
-%    \end{tablenotes}
-%\end{threeparttable} }
-%\end{table}
-%
-%\newpage
+\renewcommand{\thetable}{S\arabic{table}}
+\renewcommand{\thefigure}{S\arabic{figure}}
+\setcounter{table}{0}
+\setcounter{figure}{0}
 
 
+\begin{sidewaystable}[htp]
+\centering
+ \caption{The effect of England football days on domestic abuse by victim-offender gender group and alcohol-involvement, 2010-2019}
+   \label{gender}
+ \begin{threeparttable}
+\begin{tabular}{@{\extracolsep{1pt}}lcccccccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{8}{c}{\textit{Dependent variable:}} \\ 
+   & \multicolumn{8}{c}{Number of cases} \\ 
+  & \multicolumn{4}{c}{Non-alcohol related} &\multicolumn{4}{c}{Alcohol-related} \\ 
+\cline{2-9} 
+\\[-1.8ex] & MF & FM & MM & FF & MF & FM & MM & FF \\ 
+\\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8)\\ 
+\hline \\[-1.8ex] 
+ Tournament on & 1.027 & 1.042 & 1.005 & 0.919 & 0.982 & 1.093 & 0.981 & 0.858 \\ 
+  & [0.984, 1.071] & [0.958, 1.132] & [0.910, 1.107] & [0.824, 1.024] & [0.925, 1.043] & [0.959, 1.244] & [0.835, 1.146] & [0.692, 1.056] \\ 
+  & & & & & & & & \\ 
+ England win & 0.929 & 1.043 & 0.949 & 0.787 & 1.415$^{***}$ & 1.382 & 0.883 & 1.084 \\ 
+  & [0.808, 1.068] & [0.798, 1.346] & [0.686, 1.279] & [0.538, 1.109] & [1.183, 1.689] & [0.923, 2.001] & [0.483, 1.466] & [0.539, 1.926] \\ 
+  & & & & & & & & \\ 
+ England draw & 0.963 & 1.177 & 1.210 & 1.024 & 1.263$^{*}$ & 1.162 & 0.789 & 0.996 \\ 
+  & [0.819, 1.133] & [0.847, 1.603] & [0.836, 1.696] & [0.651, 1.529] & [1.031, 1.544] & [0.710, 1.808] & [0.392, 1.399] & [0.450, 1.886] \\ 
+  & & & & & & & & \\ 
+ England lost & 1.041 & 0.987 & 0.916 & 0.903 & 1.037 & 1.441 & 1.329 & 1.428 \\ 
+  & [0.912, 1.191] & [0.755, 1.274] & [0.664, 1.233] & [0.635, 1.245] & [0.860, 1.249] & [0.994, 2.033] & [0.842, 1.984] & [0.813, 2.311] \\ 
+  & & & & & & & & \\ 
+ After England & 1.044 & 1.058 & 1.005 & 0.969 & 1.173$^{**}$ & 1.282 & 1.117 & 1.011 \\ 
+  & [0.960, 1.135] & [0.897, 1.242] & [0.828, 1.210] & [0.783, 1.186] & [1.046, 1.315] & [0.999, 1.626] & [0.817, 1.489] & [0.666, 1.470] \\
 
-%\newpage
-%
-%\begin{table}[htp]
-%\centering
-% \scalebox{0.85}{
-%  \begin{threeparttable}
-% \caption{The effect of England matches in the Six Nations rugby tournament on domestic abuse}
-%  \label{rugby}
-%\begin{tabular}{@{\extracolsep{5pt}}lc} 
-%\\[-1.8ex]\hline 
-%\hline \\[-1.8ex] 
-% & \multicolumn{1}{c}{\textit{Dependent variable:}} \\ 
-%\cline{2-2} 
-%\\[-1.8ex] & Number of reported \\ 
-%& domestic abuse cases per day \\
-%\hline \\[-1.8ex] 
-%% Alcohol & $-$0.862$^{***}$ \\ 
-%%  & (0.031) \\ 
-%  Tournament on & 0.005 \\ 
-%  & (0.019) \\ 
-%  England win & 0.0001 \\ 
-%  & (0.035) \\ 
-%  England loss & 0.056 \\ 
-%  & (0.055) \\ 
-%  After England & $-$0.010 \\ 
-%  & (0.031) \\ 
-%  Alcohol:Tournament on & $-$0.047 \\ 
-%  & (0.035) \\ 
-%  Alcohol:England win & 0.045 \\ 
-%  & (0.059) \\ 
-%  Alcohol:England loss & $-$0.073 \\ 
-%  & (0.091) \\ 
-%  Alcohol:After England & $-$0.021 \\ 
-%  & (0.055) \\ 
-% \hline \\[-1.8ex] 
-%Number of days & 3,017 \\ 
-%%Log Likelihood & $-$20,935.710 \\ 
-%%$\theta$ & 60.091$^{***}$  (2.639) \\ 
-%%Akaike Inf. Crit. & 41,999.420 \\ 
-%%\hline 
-%\hline \\[-1.8ex] 
-%%\textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
-%\end{tabular} 
-%\begin{tablenotes}
-%      \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
-%      \item[b] \textit{Estimates are from a series of negative binomial regressions (based on tests of overdispersion)  with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol; there was only one England rugby match that resulted in a draw between 2010 and 2018, therefore we excluded it from the data; standard errors in parentheses}
-%    \end{tablenotes}
-%\end{threeparttable} } 
-%\end{table}
-%
-%
-%\newpage
-%
-%\begin{table}[htp]
-%\centering
-% \caption{Non domestic abuse incidents that are about power}
-%  \label{otherabuse}
-%  \scalebox{0.9}{
-%  \begin{threeparttable}
-%\begin{tabular}{@{\extracolsep{5pt}}lcc} 
-%\\[-1.8ex]\hline 
-%\hline \\[-1.8ex] 
-% & \multicolumn{2}{c}{\textit{Dependent variable:}} \\ 
-%\cline{2-3} 
-%  \\[-1.8ex] & \multicolumn{2}{c}{Number of cases per day} \\ 
-%\\
-%& Sexual & Other \\ 
-% & Offences & Abuse \\
-%\\[-1.8ex] & (1) & (2)\\ 
-%\hline \\[-1.8ex] 
-%% Alcohol & $-$0.955$^{***}$ & $-$0.950$^{***}$ \\ 
-%%  & (0.146) & (0.075) \\ 
-%  Tournament on & 0.079 & 0.078$^{*}$ \\ 
-%  & (0.068) & (0.042) \\ 
-%  England win & $-$0.172 & $-$0.073 \\ 
-%  & (0.217) & (0.132) \\ 
-%  England draw & $-$0.062 & 0.175 \\ 
-%  & (0.253) & (0.148) \\ 
-%  England loss & $-$0.220 & 0.153 \\ 
-%  & (0.223) & (0.132) \\ 
-%  After England & $-$0.035 & 0.095 \\ 
-%  & (0.134) & (0.081) \\ 
-%  Alcohol:Tournament on & $-$0.121 & $-$0.069 \\ 
-%  & (0.157) & (0.093) \\ 
-%  Alcohol:England win & 0.191 & 0.166 \\ 
-%  & (0.462) & (0.274) \\ 
-%  Alcohol:England draw & 0.781 & $-$0.252 \\ 
-%  & (0.503) & (0.346) \\ 
-%  Alcohol:England loss & 0.011 & $-$0.111 \\ 
-%  & (0.483) & (0.285) \\ 
-%  Alcohol:After England & 0.114 & $-$0.172 \\ 
-%  & (0.287) & (0.182) \\ 
-% \hline \\[-1.8ex] 
-%Number of days & 3,017 & 3,017  \\ 
-%%Log Likelihood & $-$11,443.050 & $-$16,185.970 \\ 
-%%$\theta$ & 4.549$^{***}$  (0.179) & 10.699$^{***}$  (0.400) \\ 
-%%Akaike Inf. Crit. & 23,018.100 & 32,503.940 \\ 
-%\hline 
-%\hline \\[-1.8ex] 
-%%\textit{Note:}  & \multicolumn{2}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
-%\end{tabular}
-%\begin{tablenotes}
-%      \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
-%      \item[b] \textit{Estimates are from a series of negative binomial regressions (based on tests of overdispersion)  with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol; standard errors in parentheses}
-%    \end{tablenotes}
-%\end{threeparttable} } 
-%\end{table}
-%\newpage
-
-
-
-
-%\begin{table}[htp]
-%\centering
-% \caption{Characteristics of domestic abuse cases reported on match days}
-%  \label{Characteristics1}
-%  \scalebox{0.9}{
-%  \begin{threeparttable}
-%\begin{tabular}{@{\extracolsep{5pt}}lccc} 
-%\\[-1.8ex]\hline 
-%\hline \\[-1.8ex] 
-% & \multicolumn{3}{c}{\textit{Dependent variable:}} \\ 
-%\cline{2-4} 
-%\\[-1.8ex] & Newly & Public &  \\ 
-%& Reported & Location &  \\ 
-%& Yes=1, & Yes=1, &  \\ 
-%& No=0 & No=0 & \\ 
-%\\[-1.8ex] & (1) & (2) & \\ 
-%\hline \\[-1.8ex] 
-%% Alcohol=Yes & $-$0.030 & 0.001 & 0.427$^{***}$ \\ 
-%%  & (0.059) & (0.081) & (0.058) \\ 
-%  Tournament on & $-$0.037 & 0.021 & \\ 
-%  & (0.030) & (0.037) &  \\ 
-%  England win & 0.011 & 0.167 & \\ 
-%  & (0.089) & (0.110) &  \\ 
-%  England draw & 0.082 & 0.014 &  \\ 
-%  & (0.121) & (0.138) &  \\ 
-%  England loss & $-$0.099 & 0.337$^{***}$ &  \\ 
-%  & (0.086) & (0.099) &  \\ 
-%  After England & 0.035 & 0.070 & \\ 
-%  & (0.056) & (0.068) &  \\ 
-%  Alcohol:Tournament on & 0.087 & 0.063 &  \\ 
-%  & (0.060) & (0.080) &  \\ 
-%  Alcohol:England win & 0.093 & 0.104 &  \\ 
-%  & (0.156) & (0.196) &  \\ 
-%  Alcohol:England draw & $-$0.151 & $-$0.016 &  \\ 
-%  & (0.233) & (0.306) &  \\ 
-%  Alcohol:England loss & 0.221 & 0.044 & \\ 
-%  & (0.171) & (0.198) &  \\ 
-%  Alcohol:After England & $-$0.036 & 0.042 &  \\ 
-%  & (0.108) & (0.143) &  \\ 
-% \hline \\[-1.8ex] 
-%Number of cases & 251,976 & 279,777 & \\ 
-%\hline \\[-1.8ex] 
-%%\textit{Note:}  & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
-%\end{tabular} 
-%\begin{tablenotes}
-%      \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
-%      \item[b] \textit{Estimates are log odds from a series of logistic regressions with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol, where every observation is a reported domestic abuse case; cases that happened in 2010 were excluded from the first regression; standard errors clustered by victim-offender pairs are in parentheses}
-%    \end{tablenotes}
-%\end{threeparttable} } 
-%\end{table}
-%\newpage
-
-
-
-
-
-
-
-%\begin{table}[htp]
-%\centering
-%  \caption{Characteristics of domestic abuse cases reported on match days II}
-%    \label{Characteristics2}
-% \scalebox{0.9}{
-%  \begin{threeparttable}
-%\begin{tabular}{@{\extracolsep{5pt}}lccc} 
-%\\[-1.8ex]\hline 
-%\hline \\[-1.8ex] 
-% & \multicolumn{3}{c}{\textit{Dependent variable:}} \\ 
-%\cline{2-4} 
-%\\[-1.8ex] & Days & Days & Hours \\ 
-% & since last & until next & until reported \\
-%\\[-1.8ex] & (1) & (2) & (3)\\ 
-%\hline \\[-1.8ex] 
-%% Alcohol & 0.103$^{*}$ & 0.057 & $-$0.839$^{***}$ \\ 
-%%  & (0.054) & (0.050) & (0.189) \\ 
-%  Tournament on & $-$0.014 & $-$0.047$^{*}$ & 0.080 \\ 
-%  & (0.028) & (0.028) & (0.063) \\ 
-%  England win & 0.016 & $-$0.340$^{***}$ & $-$0.098 \\ 
-%  & (0.082) & (0.095) & (0.162) \\ 
-%  England draw & $-$0.017 & $-$0.111 & 0.034 \\ 
-%  & (0.096) & (0.105) & (0.208) \\ 
-%  England loss & $-$0.163$^{*}$ & $-$0.104 & $-$0.560$^{***}$ \\ 
-%  & (0.087) & (0.087) & (0.170) \\ 
-%  After England & 0.052 & $-$0.139$^{**}$ & $-$0.243$^{**}$ \\ 
-%  & (0.054) & (0.055) & (0.108) \\ 
-%  Alcohol:Tournament on & 0.026 & 0.025 & 0.200 \\ 
-%  & (0.057) & (0.056) & (0.197) \\ 
-%  Alcohol:England win & $-$0.119 & 0.358$^{**}$ & 0.152 \\ 
-%  & (0.146) & (0.159) & (0.450) \\ 
-%  Alcohol:England draw & $-$0.266 & $-$0.116 & $-$0.935$^{**}$ \\ 
-%  & (0.231) & (0.208) & (0.390) \\ 
-%  Alcohol:England loss & 0.277$^{*}$ & 0.114 & 0.552 \\ 
-%  & (0.159) & (0.166) & (0.654) \\ 
-%  Alcohol:After England & $-$0.104 & 0.147 & $-$0.265 \\ 
-%  & (0.106) & (0.102) & (0.297) \\ 
-% \hline \\[-1.8ex] 
-%Number of cases & 95,091 & 95,091 & 272,793 \\ 
-%%\hline 
-%\hline \\[-1.8ex] 
-%%\textit{Note:}  & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
-%\end{tabular}
-%\begin{tablenotes}
-%      \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
-%      \item[b] \textit{Estimates are exponentiated coefficients from a series of negative binomial regressions (based on tests of overdispersion)  with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol, where every observation is a reported domestic abuse case; for each regression, we excluded the upper 2.5\% of the outcome variable; standard errors clustered by victim-offender pairs are in parentheses}
-%    \end{tablenotes}
-%\end{threeparttable} } 
-%\end{table}
-%
-%\newpage
-%
-%
-%\textsc{\begin{table}[htp]
-%\centering
-%  \caption{Alcohol transition on England match days}
-%    \label{alctrans}
-% \scalebox{0.9}{
-%  \begin{threeparttable}
-%\begin{tabular}{@{\extracolsep{5pt}}lc} 
-%\\[-1.8ex]\hline 
-%\hline \\[-1.8ex] 
-% & \multicolumn{1}{c}{\textit{Dependent variable:}} \\ 
-%\cline{2-2} 
-%	\\[-1.8ex] & Alcohol-involvement in case \\ 
-%& Yes=1, \\ 
-%& No=0 \\ 
-%\hline \\[-1.8ex] 
-% Tournament on & $-$0.134$^{**}$ \\ 
-%  & (0.062) \\ 
-%  England win & 0.443$^{***}$ \\ 
-%  & (0.157) \\ 
-%  England draw & 0.368$^{*}$ \\ 
-%  & (0.201) \\ 
-%  England loss & $-$0.113 \\ 
-%  & (0.180) \\ 
-%  After England & 0.041 \\ 
-%  & (0.114) \\ 
-%%  Previous\_alc=Yes & 1.670$^{***}$ \\ 
-%%  & (0.120) \\ 
-%  Tournament on:Previous alcohol & $-$0.051 \\ 
-%  & (0.100) \\ 
-%  England win:Previous alcohol & $-$0.110 \\ 
-%  & (0.277) \\ 
-%  England draw:Previous alcohol & $-$0.365 \\ 
-%  & (0.372) \\ 
-%  England lost:Previous alcohol & 0.179 \\ 
-%  & (0.292) \\ 
-%  After England:Previous alcohol & 0.066 \\ 
-%  & (0.180) \\ 
-% \hline \\[-1.8ex] 
-%Number of cases & 97,292 \\ 
-%%R$^{2}$ & 0.208 \\ 
-%%$\chi^{2}$ & 14,868.240$^{***}$ (df = 65) \\ 
-%%\hline 
-%\hline \\[-1.8ex] 
-%%\textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
-%\end{tabular} 
-%\begin{tablenotes}
-%      \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
-%      \item[b] \textit{Estimates are log odds from a logistic regression with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol involvement of the previous case, where every observation is a reported domestic abuse case; standard errors clustered by victim-offender pairs are in parentheses}
-%    \end{tablenotes}
-%\end{threeparttable} } 
-%\end{table}}
-
+  & & & & & & & & \\ 
+\hline \\[-1.8ex] 
+Observations & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 \\ 
+%Log Likelihood & $-$13,745.870 & $-$8,771.909 & $-$7,712.245 & $-$7,252.401 & $-$10,810.720 & $-$6,895.397 & $-$5,807.926 & $-$4,622.806 \\ 
+%$\theta$ & 47.186$^{***}$  (2.010) & 40.159$^{***}$  (5.651) & 72.089$^{**}$  (24.259) & 92.343$^{*}$  (44.780) & 40.498$^{***}$  (2.984) & 28.337$^{***}$  (6.809) &  &  \\ 
+%Akaike Inf. Crit. & 27,559.750 & 17,611.820 & 15,492.490 & 14,572.800 & 21,689.440 & 13,858.790 & 11,683.850 & 9,313.612 \\ 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{8}{r}{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001} \\ 
+\end{tabular} 
+\begin{tablenotes}
+      \item[a] \textit{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001}
+      \item[b] \textit{Estimates are exponentiated coefficients from a series of negative binomial regressions (except for models 7 and 8, which are Poisson models) with non-match day as benchmark; controls include day of week, month, year, Christmas, and New Year's Eve; 95\% confidence intervals are in square brackets}
+    \end{tablenotes}
+\end{threeparttable} 
+\end{sidewaystable}
 
 
 \end{document}
